refactor: make builder construction